--- a/.github/workflows/deploy-vervestacks.yml
+++ b/.github/workflows/deploy-vervestacks.yml
@@ -32,7 +32,7 @@ env:
   # Python service settings
   PYTHON_EXE: "C:\\Python312\\python.exe"
 
-  # App source root (kept for reference)
+  # App source root (what you copy from)
   APP_SOURCE_ROOT: "D:\\GitHub\\VerveStacks\\vervestacks-dashboard"
 
 jobs:
@@ -226,10 +226,67 @@ jobs:
           if ($log) { Stop-Transcript | Out-Null }
           exit 0
 
-      # 🚫 APP DEPLOY STEP REMOVED ON PURPOSE
+      # ==========================================================
+      # 2) APP DEPLOY (COPY APP SOURCE TO DEPLOY_ROOT\APP_SUBROOT)
+      # ==========================================================
+      - name: Deploy app from APP_SOURCE_ROOT to DEPLOY_ROOT\APP_SUBROOT
+        if: env.Update_Data_On_Local == 'true'
+        shell: powershell
+        run: |
+          $stepName = 'Deploy app files to IIS folder'
+          $log = $env:LOG_FILE
+
+          if ($log) { Start-Transcript -Path $log -Append | Out-Null }
+
+          $ErrorActionPreference = 'Stop'
+          trap {
+            Write-Host ('### STEP FAILED: {0}' -f $stepName)
+            Write-Host ('### ERROR: {0}' -f $_.Exception.Message)
+            Write-Host $_.ScriptStackTrace
+
+            if ($log) { Stop-Transcript | Out-Null }
+            exit 1
+          }
+
+          Write-Host ('=== [{0}] ===' -f $stepName)
+
+          $src = $env:APP_SOURCE_ROOT
+          $dst = Join-Path $env:DEPLOY_ROOT $env:APP_SUBROOT
+
+          Write-Host ('Source (APP_SOURCE_ROOT) = {0}' -f $src)
+          Write-Host ('Destination (DEPLOY_ROOT\APP_SUBROOT) = {0}' -f $dst)
+
+          if (-not (Test-Path $src)) {
+            Write-Host '### ERROR DETAIL: Source app folder does not exist. Check APP_SOURCE_ROOT.'
+            if ($log) { Stop-Transcript | Out-Null }
+            exit 1
+          }
+
+          if (-not (Test-Path $dst)) {
+            Write-Host ('Creating deployment folder (with parents if needed): {0}' -f $dst)
+            [System.IO.Directory]::CreateDirectory($dst) | Out-Null
+          }
+
+          Write-Host 'Running robocopy for application deployment (excluding .git & .github folders)...'
+          robocopy $src $dst /E /Z /R:3 /W:5 /XD ".git" ".github" /NFL /NDL /NJH /NJS /NP
+          $code = $LASTEXITCODE
+
+          Write-Host ('App robocopy exit code: {0}' -f $code)
+          Write-Host 'INFO: Robocopy exit codes 0-7 are success/acceptable; 8 or higher indicates failure.'
+
+          if ($code -ge 8) {
+            Write-Host ("### ERROR DETAIL: Deployment robocopy failed (code {0}). Files may be partially copied." -f $code)
+            if ($log) { Stop-Transcript | Out-Null }
+            exit $code
+          }
+
+          Write-Host 'Deployment completed successfully (app folder synced to IIS target).'
+
+          if ($log) { Stop-Transcript | Out-Null }
+          exit 0
 
       # ==========================================================
-      # 3) BACKEND + FRONTEND (npm)
+      # 3) BACKEND + FRONTEND (npm) ON DESTINATION
       # ==========================================================
       - name: Install JS deps and build frontend on DEPLOY_ROOT
         shell: powershell
@@ -270,9 +327,15 @@ jobs:
             Write-Host ("{0}: Path = {1}" -f $name, $path)
 
             if (-not (Test-Path $path)) {
-              Write-Host ("ERROR: {0} path does not exist: {1}" -f $name, $path)
-              if ($log) { Stop-Transcript | Out-Null }
-              exit 1
+              if ($name -eq 'Backend') {
+                Write-Host ("WARNING: {0} path does not exist: {1} - skipping backend npm install." -f $name, $path)
+                continue
+              }
+              else {
+                Write-Host ("ERROR: {0} path does not exist: {1}" -f $name, $path)
+                if ($log) { Stop-Transcript | Out-Null }
+                exit 1
+              }
             }
 
             cd $path
@@ -301,7 +364,7 @@ jobs:
           exit 0
 
       # ==========================================================
-      # 3b) Publish frontend build to IIS root
+      # 3b) PUBLISH FRONTEND BUILD TO IIS ROOT
       # ==========================================================
       - name: Publish frontend build to IIS root
         shell: powershell
@@ -406,13 +469,26 @@ jobs:
           exit 0
 
       # ==========================================================
-      # 5) PLACEHOLDER: HETZNER DEPLOY
+      # 5) PLACEHOLDER: HETZNER DEPLOY (FUTURE)
       # ==========================================================
       - name: Deploy to Hetzner (placeholder)
         if: env.Update_Data_On_Hetzner == 'true'
         shell: powershell
         run: |
-          Write-Host 'Hetzner deploy not implemented.'
+          $stepName = 'Deploy to Hetzner (placeholder)'
+          $log = $env:LOG_FILE
+          if ($log) { Start-Transcript -Path $log -Append | Out-Null }
+          $ErrorActionPreference = 'Stop'
+          trap {
+            Write-Host "### STEP FAILED: $stepName"
+            Write-Host "### ERROR: $($_.Exception.Message)"
+            Write-Host $_.ScriptStackTrace
+            if ($log) { Stop-Transcript | Out-Null }
+            exit 1
+          }
+          Write-Host "=== [$stepName] ==="
+          Write-Host 'Update_Data_On_Hetzner == true, but remote deploy logic is not implemented yet.'
+          if ($log) { Stop-Transcript | Out-Null }
           exit 0
 
       # ==========================================================
@@ -453,7 +529,7 @@ jobs:
           $rc = $LASTEXITCODE
 
           if ($rc -ne 0) {
-            Write-Host ("### ERROR DETAIL: start.bat exited with code {0}." -f $rc)
+            Write-Host ("### ERROR DETAIL: start.bat exited with code {0}. See any messages printed by the script above." -f $rc)
             if ($log) { Stop-Transcript | Out-Null }
             exit $rc
           }
